# calico

./: .gitignore  Dockerfile  README.md  license.md
src/: .project  CMakeLists.txt  DirectoryFunctions.cpp  DirectoryFunctions.hpp  Includes.hpp  apriltag-file.cpp  apriltag-file.hpp  calico.cpp  calico.hpp  camera-calibration.cpp  camera-calibration.hpp  camera-visualization.cpp  camera-visualization.hpp  camera_calibration.cpp  camera_calibration.hpp  camera_visualization.cpp  camera_visualization.hpp  compute-error.cpp  detector_params.yml  helper-cali.cpp  helper-cali.hpp  helper.cpp  helper.hpp  local-charuco.cpp  local_charuco.cpp  local_charuco.hpp  multicamera.cpp  multicamera.hpp  pattern-parameters.cpp  pattern-parameters.hpp  patterns.cpp  patterns.hpp  solving-structure.cpp  solving-structure.hpp  solving_structure.cpp  solving_structure.hpp
